--- a/src/components/ZLayout.css
+++ b/src/components/ZLayout.css
@@ -28,9 +28,10 @@
   padding-bottom: 3%;
 }
 
-.container{
+container{
   display: flex;
   width: 100%;
+  height: 40%;
 }
 
 .leftpane {
@@ -167,4 +168,23 @@
 
 .editAccord{
   margin-left: 5px;
+}
+
+.gridcontainer{
+  display: grid;
+  height: 100vh;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 2fr 2fr ;
+  row-gap: 12px;
+  column-gap: 12px;
+}
+
+.item{
+  background-color: aqua;
+}
+
+.itemHead{
+  grid-column-start: 1;
+  grid-column-end: 4;
+  background-color: aqua;
 }
